*** empty log message ***

--- a/samples/fifo/.tkenvrc
+++ b/samples/fifo/.tkenvrc
@@ -1,3 +1,35 @@
-"fifonet.fifo.queue" "cQueue" "1" "351x164+8+268"
-"fifonet" "FifoNet" "2" "349x232+8+6"
-"fifonet.sink.queueing time vector" "cOutVector" "2" "353x177+9+467"
+# Tkenv configuration
+option updatefreq_fast	{50}
+option updatefreq_express	{10000}
+option stepdelay	{300 ms}
+option use_mainwindow	{1}
+option print_banners	{1}
+option animation_enabled	{1}
+option nexteventmarkers	{1}
+option senddirect_arrows	{1}
+option anim_methodcalls	{1}
+option methodcalls_delay	{200}
+option animation_msgnames	{1}
+option animation_msgcolors	{1}
+option penguin_mode	{0}
+option showlayouting	{0}
+option bubbles	{1}
+option animation_speed	{1}
+option bkpts_enabled	{1}
+config last-nedfile	{}
+config filtobjlist-category	{mqsgvo}
+config filtobjlist-maxcount	{100000}
+config editor-findstring	{}
+config editor-regexp	{0}
+config filtobjlist-class	{}
+config filtobjlist-name	{}
+config editor-backwards	{1}
+config display-treeview	{1}
+config editor-case-sensitive	{0}
+config editor-whole-words	{0}
+config filtobjlist-order	{Class}
+inspector "fifonet2" "FifoNet2" "2" "330x292+76+381"
+inspector "fifonet" "FifoNet" "2" "349x232+8+6"
+inspector "fifonet.sink.queueing time vector" "cOutVector" "2" "353x177+9+467"
+inspector "fifonet.fifo.queue" "cQueue" "1" "351x164+8+268"
+
