--- a/samples/dyna/.tkenvrc
+++ b/samples/dyna/.tkenvrc
@@ -1,4 +1,34 @@
-"dyna" "ClientServer" "2" "307x313+23+-13"
-"dyna.client[2]" "Client" "3" "504x162+9+342"
-"simulation.scheduled-events.CONN_REQ" "cMessage" "1" "349x199+227+432"
-"dyna.server" "Server" "3" "502x125+10+536"
+# Tkenv configuration
+option updatefreq_fast	{10}
+option updatefreq_express	{100}
+option stepdelay	{300 ms}
+option use_mainwindow	{1}
+option print_banners	{1}
+option animation_enabled	{1}
+option nexteventmarkers	{1}
+option senddirect_arrows	{1}
+option anim_methodcalls	{1}
+option methodcalls_delay	{200}
+option animation_msgnames	{1}
+option animation_msgcolors	{1}
+option penguin_mode	{0}
+option showlayouting	{0}
+option bubbles	{1}
+option animation_speed	{1}
+option bkpts_enabled	{1}
+config last-nedfile	{}
+config filtobjlist-category	{mqsgvo}
+config filtobjlist-maxcount	{100000}
+config editor-findstring	{}
+config editor-regexp	{0}
+config filtobjlist-class	{}
+config filtobjlist-name	{}
+config editor-backwards	{1}
+config display-treeview	{1}
+config editor-case-sensitive	{0}
+config editor-whole-words	{0}
+config filtobjlist-order	{Class}
+inspector "dyna.client[2]" "Client" "3" "504x162+13+362"
+inspector "dyna.server" "Server" "3" "502x125+14+556"
+inspector "simulation.scheduled-events.CONN_REQ" "cMessage" "1" "349x199+227+432"
+
