--- a/tutorial/queues/Makefile.in
+++ b/tutorial/queues/Makefile.in
@@ -12,26 +12,22 @@ TARGET = queues
 # USERIF_LIBS=$(CMDENV_LIBS)
 USERIF_LIBS=$(TKENV_LIBS)
 
-# uncomment 1 of the 3 lines to support either serial or parallel operation
-KERNEL_LIBS=$(STD_KERNEL_LIBS)
-# KERNEL_LIBS=$(PVM_KERNEL_LIBS)
-# KERNEL_LIBS=$(MPI_KERNEL_LIBS)
-
 # .ned or .h include paths with -I
 INCLUDE_PATH=
 
 # misc additional object and library files to link
-EXRA_OBJS=
+EXTRA_OBJS=
 
-# object files in subdirectories
-SUBDIR_OBJS=
+# object files from other directories to link with
+EXT_DIR_OBJS=
 
-# Additional libraries (-l option)
+# Additional libraries (-L option -l option)
 LIBS=
 
 #------------------------------------------------------------------------------
 
 NEDC=@NEDC@
+MSGC=@MSGC@
 CXX=@CXX@
 CC=@CC@
 AR=@AR@
@@ -43,12 +39,15 @@ NEDCFLAGS=@NEDCFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
 
+WITH_PARSIM=@WITH_PARSIM@
+WITH_NETBUILDER=@WITH_NETBUILDER@
+
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
 
 TK_LIBS=@TK_LIBS@
 MPI_LIBS=@MPI_LIBS@
-PVM_LIBS=@PVM_LIBS@
+XML_LIBS=@XML_LIBS@
 SYS_LIBS=@SYS_LIBS@
 SYS_LIBS_PURE=-lm $(shell $(CXX) -print-file-name=libstdc++.a)
 
@@ -57,9 +56,15 @@ CMDENV_LIBS=-lenvir -lcmdenv
 TKENV_LIBS=-lenvir -ltkenv $(TK_LIBS)
 
 # Simulation kernel
-STD_KERNEL_LIBS=-lsim_std
-MPI_KERNEL_LIBS=-lsim_mpi $(MPI_LIBS)
-PVM_KERNEL_LIBS=-lsim_pvm $(PVM_LIBS)
+KERNEL_LIBS=-lsim_std
+
+ifeq ($(WITH_NETBUILDER),yes)
+KERNEL_LIBS += -lnedxml $(XML_LIBS)
+endif
+
+ifeq ($(WITH_PARSIM),yes)
+KERNEL_LIBS += $(MPI_LIBS)
+endif
 
 # Simulation kernel and user interface libraries
 OMNETPP_LIBS=-L$(OMNETPP_LIB_DIR) $(USERIF_LIBS) $(KERNEL_LIBS) $(SYS_LIBS)
@@ -69,14 +74,23 @@ NEDCOPTS=$(CFLAGS) $(NEDCFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 
 #------------------------------------------------------------------------------
 
-# Object files from this directory to link
-OBJS= fifo_n.o fifonet_n.o gen_n.o ring_n.o sink_n.o distributions.o fifo.o   gen.o   sink.o 
+# subdirectories to recurse into
+SUBDIRS= 
 
-$(TARGET): $(OBJS) $(EXRA_OBJS) Makefile 
-	$(CXX) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) $(OMNETPP_LIBS) -o $(TARGET)
+# object files in this directory
+OBJS= fifo_n.o fifonet_n.o gen_n.o ring_n.o sink_n.o  distributions.o fifo.o gen.o sink.o
 
-purify: $(OBJS) $(EXRA_OBJS)   Makefile
-	purify $(CXX) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) -L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS_PURE) -o $(TARGET).pure
+#------------------------------------------------------------------------------
+
+$(TARGET): $(OBJS) $(EXTRA_OBJS) Makefile
+	$(CXX) $(LDFLAGS) $(OBJS) $(EXTRA_OBJS) $(EXT_DIR_OBJS) $(LIBS) $(OMNETPP_LIBS) -o $(TARGET)
+
+purify: $(OBJS) $(EXTRA_OBJS) Makefile
+	purify $(CXX) $(LDFLAGS) $(OBJS) $(EXTRA_OBJS) $(EXT_DIR_OBJS) $(LIBS) -L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS_PURE) -o $(TARGET).pure
+
+.PHONY: subdirs $(SUBDIRS)
+
+subdirs: $(SUBDIRS)
 
 fifo_n.o: fifo_n.cc
 	$(CXX) -c $(NEDCOPTS) fifo_n.cc
@@ -120,13 +134,23 @@ gen.o: gen.cc
 sink.o: sink.cc
 	$(CXX) -c $(COPTS) sink.cc
 
+
+#doc: neddoc doxy
+
+#neddoc:
+#	opp_neddoc -a
+
+#doxy: doxy.cfg
+#	doxygen doxy.cfg
+
 clean:
-	rm -f *.o *_n.cc $(TARGET)$(EXE_SUFFIX)
+	rm -f *.o *_n.cc *_n.h *_m.cc *_m.h $(TARGET)$(EXE_SUFFIX)
 	rm -f *.vec *.sca
+	for i in $(SUBDIRS); do (cd $$i && $(MAKE) clean); done
 
 depend:
 	$(MAKEDEPEND) $(INCLUDE_PATH) -- *.cc
-	$(MAKEDEPEND) $(INCLUDE_PATH) -fMakefile.in -- *.cc
+	# $(MAKEDEPEND) $(INCLUDE_PATH) -fMakefile.in -- *.cc
 
 re-makemake:
 	opp_makemake -f    #recreate Makefile
@@ -134,16 +158,12 @@ re-makemake:
 re-makemake-m:
 	opp_makemake -f -m    #recreate Makefile.in
 
+
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 distributions.o: distributions.cc
 fifo.o: fifo.cc \
   fifo.h
-fifo_n.o: fifo_n.cc
-fifonet_n.o: fifonet_n.cc
 gen.o: gen.cc \
   gen.h
-gen_n.o: gen_n.cc
-ring_n.o: ring_n.cc
 sink.o: sink.cc \
   sink.h
-sink_n.o: sink_n.cc
