*** empty log message ***

--- a/samples/aloha/Makefile.in
+++ b/samples/aloha/Makefile.in
@@ -12,6 +12,11 @@ TARGET = aloha
 # USERIF_LIBS=$(CMDENV_LIBS)
 USERIF_LIBS=$(TKENV_LIBS)
 
+# uncomment 1 of the 3 lines to support either serial or parallel operation
+KERNEL_LIBS=$(STD_KERNEL_LIBS)
+# KERNEL_LIBS=$(PVM_KERNEL_LIBS)
+# KERNEL_LIBS=$(MPI_KERNEL_LIBS)
+
 # .ned or .h include paths with -I
 INCLUDE_PATH=
 
@@ -39,15 +44,12 @@ NEDCFLAGS=@NEDCFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
 
-WITH_PARSIM=@WITH_PARSIM@
-WITH_NETBUILDER=@WITH_NETBUILDER@
-
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
 
 TK_LIBS=@TK_LIBS@
 MPI_LIBS=@MPI_LIBS@
-XML_LIBS=@XML_LIBS@
+PVM_LIBS=@PVM_LIBS@
 SYS_LIBS=@SYS_LIBS@
 SYS_LIBS_PURE=-lm $(shell $(CXX) -print-file-name=libstdc++.a)
 
@@ -56,15 +58,9 @@ CMDENV_LIBS=-lenvir -lcmdenv
 TKENV_LIBS=-lenvir -ltkenv $(TK_LIBS)
 
 # Simulation kernel
-KERNEL_LIBS=-lsim_std
-
-ifeq ($(WITH_NETBUILDER),yes)
-KERNEL_LIBS += -lnedxml $(XML_LIBS)
-endif
-
-ifeq ($(WITH_PARSIM),yes)
-KERNEL_LIBS += $(MPI_LIBS)
-endif
+STD_KERNEL_LIBS=-lsim_std
+MPI_KERNEL_LIBS=-lsim_mpi $(MPI_LIBS)
+PVM_KERNEL_LIBS=-lsim_pvm $(PVM_LIBS)
 
 # Simulation kernel and user interface libraries
 OMNETPP_LIBS=-L$(OMNETPP_LIB_DIR) $(USERIF_LIBS) $(KERNEL_LIBS) $(SYS_LIBS)
@@ -75,10 +71,10 @@ NEDCOPTS=$(CFLAGS) $(NEDCFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 #------------------------------------------------------------------------------
 
 # subdirectories to recurse into
-SUBDIRS= 
+SUBDIRS=  release
 
 # object files in this directory
-OBJS= network_n.o  aloha.o
+OBJS= network_n.o  host.o server.o
 
 #------------------------------------------------------------------------------
 
@@ -92,14 +88,20 @@ purify: $(OBJS) $(EXTRA_OBJS) Makefile
 
 subdirs: $(SUBDIRS)
 
+release:
+	cd release && $(MAKE)
+
 network_n.o: network_n.cc
 	$(CXX) -c $(NEDCOPTS) network_n.cc
 
 network_n.cc: network.ned
 	$(NEDC) $(INCLUDE_PATH) network.ned
 
-aloha.o: aloha.cc
-	$(CXX) -c $(COPTS) aloha.cc
+host.o: host.cc
+	$(CXX) -c $(COPTS) host.cc
+
+server.o: server.cc
+	$(CXX) -c $(COPTS) server.cc
 
 
 #doc: neddoc doxy
@@ -113,7 +115,7 @@ aloha.o: aloha.cc
 clean:
 	rm -f *.o *_n.cc *_n.h *_m.cc *_m.h $(TARGET)$(EXE_SUFFIX)
 	rm -f *.vec *.sca
-	for i in $(SUBDIRS); do (cd $$i && $(MAKE) clean); done
+	for i in $(SUBDIRS); do (cd $$i && $(MAKE) clean); done 
 
 depend:
 	$(MAKEDEPEND) $(INCLUDE_PATH) -- *.cc
@@ -127,4 +129,5 @@ re-makemake-m:
 
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-aloha.o: aloha.cc
+host.o: host.cc
+server.o: server.cc
