--- a/samples/aloha/omnetpp.ini
+++ b/samples/aloha/omnetpp.ini
@@ -1,7 +1,20 @@
-[Run 1]
+[General]
 network=alohaNet
+
+[Parameters]
 alohaNet.numHosts=20
 alohaNet.txRate=9600
-alohaNet.host[*].iaTime=exponential(0.5)
 alohaNet.host[*].radioDelay=0.01
 alohaNet.host[*].pkLenBits=512
+
+[Run 1]
+# too frequent transmissions result in high collision rate and low channel utilization
+alohaNet.host[*].iaTime=exponential(1)
+
+[Run 2]
+# near optimal load, channel utilization is near theoretical maximum 1/2e
+alohaNet.host[*].iaTime=exponential(3)
+
+[Run 3]
+# very low traffic results in channel being idle mosy of the time
+alohaNet.host[*].iaTime=exponential(20)
