--- a/samples/aloha/aloha.dsp.in
+++ b/samples/aloha/aloha.dsp.in
@@ -7,21 +7,21 @@
 CFG=aloha - Win32 Debug Tkenv
 !MESSAGE This is not a valid makefile. To build this project using NMAKE,
 !MESSAGE use the Export Makefile command and run
-!MESSAGE
+!MESSAGE 
 !MESSAGE NMAKE /f "aloha.mak".
-!MESSAGE
+!MESSAGE 
 !MESSAGE You can specify a configuration when running NMAKE
 !MESSAGE by defining the macro CFG on the command line. For example:
-!MESSAGE
+!MESSAGE 
 !MESSAGE NMAKE /f "aloha.mak" CFG="aloha - Win32 Debug Tkenv"
-!MESSAGE
+!MESSAGE 
 !MESSAGE Possible choices for configuration are:
-!MESSAGE
+!MESSAGE 
 !MESSAGE "aloha - Win32 Debug Tkenv" (based on "Win32 (x86) Console Application")
 !MESSAGE "aloha - Win32 Debug Cmdenv" (based on "Win32 (x86) Console Application")
 !MESSAGE "aloha - Win32 Release Tkenv" (based on "Win32 (x86) Console Application")
 !MESSAGE "aloha - Win32 Release Cmdenv" (based on "Win32 (x86) Console Application")
-!MESSAGE
+!MESSAGE 
 
 # Begin Project
 # PROP AllowPerConfigDependencies 0
@@ -128,7 +128,7 @@ LINK32=link.exe
 # ADD BASE LINK32 kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /machine:I386
 # ADD LINK32 cmdenv.lib sim_std.lib envir.lib nedxml.lib @EXPAT_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x10000 /subsystem:console /machine:I386 /libpath:"@OMNETPP_LIB_DIR@" /libpath:"@TK_LIB_PATH@" /libpath:"@EXPAT_LIB_PATH@"
 
-!ENDIF
+!ENDIF 
 
 # Begin Target
 
@@ -141,7 +141,7 @@ LINK32=link.exe
 # PROP Default_Filter "cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 # Begin Source File
 
-SOURCE=.\aloha.cpp
+SOURCE=.\host.cpp
 # End Source File
 # Begin Source File
 
@@ -191,12 +191,16 @@ InputName=network
 
 # End Custom Build
 
-!ENDIF
+!ENDIF 
 
 # End Source File
 # Begin Source File
 
 SOURCE=.\network_n.cpp
+# End Source File
+# Begin Source File
+
+SOURCE=.\server.cpp
 # End Source File
 # End Group
 # Begin Group "Header Files"
