*** empty log message ***

--- a/samples/aloha/omnetpp.ini
+++ b/samples/aloha/omnetpp.ini
@@ -4,17 +4,42 @@ network=alohaNet
 [Parameters]
 alohaNet.numHosts=20
 alohaNet.txRate=9600
+alohaNet.host[*].pkLenBits=960  #=120 bytes, so that slotTime is a nice round number
 alohaNet.host[*].radioDelay=0.01
-alohaNet.host[*].pkLenBits=512
 
 [Run 1]
+# pure Aloha (no slots)
+alohaNet.slotTime=0
+# too frequent transmissions result in high collision rate and low channel utilization
+alohaNet.host[*].iaTime=exponential(2)
+
+[Run 2]
+# pure Aloha (no slots)
+alohaNet.slotTime=0
+# near optimal load, channel utilization is near theoretical maximum 1/2e
+alohaNet.host[*].iaTime=exponential(6)
+
+[Run 3]
+# pure Aloha (no slots)
+alohaNet.slotTime=0
+# very low traffic results in channel being idle mosy of the time
+alohaNet.host[*].iaTime=exponential(30)
+
+
+[Run 4]
+# slotted Aloha (slotTime = pkLen/txRate = 960/9600 = 0.1s)
+alohaNet.slotTime=0.1s
 # too frequent transmissions result in high collision rate and low channel utilization
 alohaNet.host[*].iaTime=exponential(1)
 
-[Run 2]
-# near optimal load, channel utilization is near theoretical maximum 1/2e
+[Run 5]
+# slotted Aloha (slotTime = pkLen/txRate = 960/9600 = 0.1s)
+alohaNet.slotTime=0.1s
+# near optimal load, channel utilization is near theoretical maximum 1/e
 alohaNet.host[*].iaTime=exponential(3)
 
-[Run 3]
+[Run 6]
+# slotted Aloha (slotTime = pkLen/txRate = 960/9600 = 0.1s)
+alohaNet.slotTime=0.1s
 # very low traffic results in channel being idle mosy of the time
 alohaNet.host[*].iaTime=exponential(20)
