*** empty log message ***

--- a/samples/aloha/omnetpp.ini
+++ b/samples/aloha/omnetpp.ini
@@ -4,7 +4,7 @@ network=alohaNet
 [Parameters]
 alohaNet.numHosts=20
 alohaNet.txRate=9600
-alohaNet.host[*].pkLenBits=960  #=120 bytes, so that slotTime is a nice round number
+alohaNet.host[*].pkLenBits=952 #=119 bytes, so that (with +1 byte guard) slotTime is a nice round number
 alohaNet.host[*].radioDelay=0.01
 
 [Run 1]
