--- a/samples/tictoc/Makefile.in
+++ b/samples/tictoc/Makefile.in
@@ -78,7 +78,7 @@ NEDCOPTS=$(CFLAGS) $(NEDCFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 SUBDIRS= 
 
 # object files in this directory
-OBJS= tictoc1_n.o tictoc10_n.o tictoc11_n.o tictoc2_n.o tictoc3_n.o tictoc4_n.o tictoc6_n.o tictoc7_n.o tictoc8_n.o tictoc9_n.o tictoc10_m.o tictoc11_m.o txc1.o txc10.o txc11.o txc3.o txc4.o txc5.o txc6.o txc7.o txc8.o txc9.o
+OBJS= tictoc1_n.o tictoc10_n.o tictoc11_n.o tictoc2_n.o tictoc3_n.o tictoc4_n.o tictoc5_n.o tictoc6_n.o tictoc7_n.o tictoc8_n.o tictoc9_n.o tictoc10_m.o tictoc11_m.o txc1.o txc10.o txc11.o txc3.o txc4.o txc5.o txc6.o txc7.o txc8.o txc9.o
 
 #------------------------------------------------------------------------------
 
@@ -127,6 +127,12 @@ tictoc4_n.o: tictoc4_n.cc
 
 tictoc4_n.cc: tictoc4.ned
 	$(NEDC) $(INCLUDE_PATH) tictoc4.ned
+
+tictoc5_n.o: tictoc5_n.cc
+	$(CXX) -c $(NEDCOPTS) tictoc5_n.cc
+
+tictoc5_n.cc: tictoc5.ned
+	$(NEDC) $(INCLUDE_PATH) tictoc5.ned
 
 tictoc6_n.o: tictoc6_n.cc
 	$(CXX) -c $(NEDCOPTS) tictoc6_n.cc
