*** empty log message ***

--- a/samples/queueing/omnetpp.ini
+++ b/samples/queueing/omnetpp.ini
@@ -2,7 +2,7 @@
 network = qnet
 
 [Run 1]
-*.src.sendIATime = exponential(1)
-*.src.msgKindProbabilities = ""
-*.d[*].delayBy = 1s
+*.enter.sendIATime = exponential(1)
+*.enter.msgKindProbabilities = ""
+*.delay_[*].delayBy = 1s
 *.qserver.serviceTime = exponential(1.30)
