*** empty log message ***

--- a/src/sim/Makefile.vc
+++ b/src/sim/Makefile.vc
@@ -36,11 +36,10 @@ CPPOBJS= $(CPPOBJS_STD)
 
 !if "$(WITH_NETBUILDER)"=="yes"
 CPPOBJS= $(CPPOBJS) $(CPPOBJS_NETBUILDER)
-COPTS= $(COPTS) /DWITH_NETBUILDER /I ../nedxml
+COPTS= $(COPTS) /I ../nedxml
 !endif
 
 !if "$(WITH_PARSIM)"=="yes"
-COPTS= $(COPTS) /DWITH_PARSIM
 CPPOBJS= $(CPPOBJS) $(CPPOBJS_PARSIM)
 !if "$(HAVE_MPI)"=="yes"
 CPPOBJS= $(CPPOBJS) $(CPPOBJS_MPI)
