*** empty log message ***

--- a/samples/dyna/omnetpp.ini
+++ b/samples/dyna/omnetpp.ini
@@ -1,9 +1,7 @@
 [General]
 network = dyna
 
-ini-warnings = no
 random-seed = 1
-warnings = yes
 snapshot-file = dyna.sna
 output-vector-file = dyna.vec
 sim-time-limit = 50000s
@@ -28,11 +26,6 @@ update-freq-fast = 10
 update-freq-express = 100
 breakpoints-enabled = yes
 
-[DisplayStrings]
-*.client[*] = "i=comp;p=,,m,10"
-*.server = "i=pc"
-*.switch = "i=switch2;q=queue"
-
 [Parameters]
 dyna.client[*].connIaTime =  exponential( 10s )
 dyna.client[*].queryIaTime = exponential( 2s )
@@ -40,10 +33,11 @@ dyna.client[*].numQuery =     truncnormal( 3, 1 )
 dyna.server.processingTime =  0.2s
 
 [Run 1]
-; dyna.numClients =
+#dyna.numClients =
 
 [Run 2]
 dyna.numClients = 8
 
 [Run 3]
 dyna.numClients = 20
+
