*** empty log message ***

--- a/test/perf/omnetpp.ini
+++ b/test/perf/omnetpp.ini
@@ -1,6 +1,23 @@
 [General]
-;network=methodAnimTest
+
+[Cmdenv]
+express-mode=true
+performance-display=true
+autoflush=true
+status-frequency=10000000
 
 [Parameters]
 *.qLevel=0
-*.repCount=1000000
+*.repCount=10000000
+
+[Run 1]
+network=queue_1
+
+[Run 2]
+network=schedule_1
+
+[Run 3]
+network=sendTest_1
+
+[Run 4]
+network=sendTest_2
