*** empty log message ***

--- a/test/perf/omnetpp.ini
+++ b/test/perf/omnetpp.ini
@@ -14,10 +14,13 @@ status-frequency=10000000
 network=queue_1
 
 [Run 2]
-network=schedule_1
+network=selectNextModule_1
 
 [Run 3]
-network=sendTest_1
+network=schedule_1
 
 [Run 4]
+network=sendTest_1
+
+[Run 5]
 network=sendTest_2
